update API and models: integrate enhanced Member model, changed API paths, add validation middleware, add Get Member Logic
