# crusader-back/api.yaml
@@ -1,77 +1,92 @@
+openapi: 3.0.3
 info:
-  title: APIFiddle Sample Definition
-  version: 0.0.0
+  title: Crusader API
+  version: 0.0.1
   description: Example workspace
 tags:
   - name: member
-    description: member related stuff
+    description: Member related operations
+servers:
+  - url: http://localhost:8080
+    description: Local development server
 paths:
   /member:
     post:
       tags:
         - member
       summary: Create member
+      description: Creates a new record of type Member.
+      operationId: createMember
       security:
         - BearerJwt: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/MemberCreate"
       responses:
         '201':
+          description: The request was successful, and a new resource was created.
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/MemberCreate'
-                title: CreateMemberCreated
-          description: The request was successful, and a new resource was created.
+                $ref: '#/components/schemas/Member'
         '400':
           $ref: '#/components/responses/BadRequest'
         '409':
           $ref: '#/components/responses/Conflict'
         '500':
-          $ref: '#/components/responses/InternalServerErrror'
-      description: Creates a new record of type Member.
-      operationId: createMember
+          $ref: '#/components/responses/InternalServerError'
+
   /member/{id}:
     get:
       tags:
         - member
       summary: Get member
+      description: Returns a record of type Member.
+      operationId: getMember
       security:
         - BearerJwt: []
+      parameters:
+        - $ref: '#/components/parameters/id'
       responses:
         '200':
+          description: Successfully retrieved the member.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Member'
-          description: >-
-            The request was successful, and the server has returned the the
-            member object in the response body.
         '400':
           $ref: '#/components/responses/BadRequest'
         '404':
           $ref: '#/components/responses/NotFound'
         '500':
-          $ref: '#/components/responses/InternalServerErrror'
-      parameters:
-        - $ref: '#/components/parameters/id'
-      description: Returns a record of type Member.
-      operationId: getMember
+          $ref: '#/components/responses/InternalServerError'
+
     put:
       tags:
         - member
       summary: Update member
+      description: Updates a record of type Member.
+      operationId: updateMember
       security:
         - BearerJwt: []
+      parameters:
+        - $ref: '#/components/parameters/id'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/MemberUpdate"
       responses:
         '200':
+          description: Successfully updated the member.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/MemberUpdate'
-          description: >-
-            The request was successful, and the server has returned the updated
-            member in the response body.
+                $ref: '#/components/schemas/Member'
         '400':
           $ref: '#/components/responses/BadRequest'
         '404':
@@ -79,66 +94,58 @@ paths:
         '409':
           $ref: '#/components/responses/Conflict'
         '500':
-          $ref: '#/components/responses/InternalServerErrror'
-      parameters:
-        - $ref: '#/components/parameters/id'
-      description: Updates a record of type Member.
-      operationId: updateMember
+          $ref: '#/components/responses/InternalServerError'
+
     patch:
       tags:
         - member
       summary: Patch member
+      description: Partially updates a record of type Member.
+      operationId: partialUpdateMember
       security:
         - BearerJwt: []
+      parameters:
+        - $ref: '#/components/parameters/id'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/MemberPartialUpdate"
       responses:
         '200':
+          description: Successfully patched the member.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/MemberPartialUpdate'
-          description: >-
-            The request was successful, and the server has returned the
-            partially updated member in the response body.
+                $ref: '#/components/schemas/Member'
         '400':
           $ref: '#/components/responses/BadRequest'
         '404':
           $ref: '#/components/responses/NotFound'
         '500':
-          $ref: '#/components/responses/InternalServerErrror'
-      parameters:
-        - $ref: '#/components/parameters/id'
-      description: Partially updates a record of type Member.
-      operationId: partialUpdateMember
+          $ref: '#/components/responses/InternalServerError'
+
     delete:
       tags:
         - member
       summary: Delete member
+      description: Deletes a record of type Member.
+      operationId: removeMember
       security:
         - BearerJwt: []
+      parameters:
+        - $ref: '#/components/parameters/id'
       responses:
         '204':
-          content:
-            application/json:
-              schema:
-                type: string
-                title: RemoveMemberNoContent
-          description: >-
-            The request was successful, but there is no content to return in the
-            response.
+          description: The request was successful, but there is no content to return.
         '400':
           $ref: '#/components/responses/BadRequest'
         '404':
           $ref: '#/components/responses/NotFound'
         '500':
-          $ref: '#/components/responses/InternalServerErrror'
-      parameters:
-        - $ref: '#/components/parameters/id'
-      description: Deletes a record of type Member.
-      operationId: removeMember
-openapi: 3.0.3
-servers:
-  - url: https://api.ksk-crusader.de/v1
-    description: ''
+          $ref: '#/components/responses/InternalServerError'
+
 components:
   schemas:
     Member:
@@ -180,8 +187,8 @@ components:
           type: string
         membership_type:
           type: string
-      description: |
-        Represantiation of a member
+      description: Representation of a member
+
     MemberCreate:
       type: object
       required:
@@ -190,10 +197,8 @@ components:
         - points
         - steam_id
         - discord_id
-        - unit
-        - stab
-        - membership_type
         - discord_nick
+        - membership_type
       properties:
         name:
           type: string
@@ -215,8 +220,7 @@ components:
           type: string
         membership_type:
           type: string
-      x-fiddle-dto-info:
-        baseSchemaName: Member
+
     MemberUpdate:
       type: object
       required:
@@ -250,62 +254,9 @@ components:
           type: string
         membership_type:
           type: string
-      x-fiddle-dto-info:
-        baseSchemaName: Member
-    MemberSummary:
-      type: object
-      required:
-        - name
-        - discord_id
-        - steam_id
-        - rank
-        - points
-        - created_at
-        - unit
-        - stab
-        - membership_type
-        - discord_nick
-        - updated_at
-      properties:
-        name:
-          type: string
-        rank:
-          type: string
-        stab:
-          type: array
-          items:
-            type: string
-        unit:
-          type: string
-        points:
-          type: string
-        steam_id:
-          type: string
-        created_at:
-          type: string
-        discord_id:
-          type: string
-        updated_at:
-          type: string
-        discord_nick:
-          type: string
-        membership_type:
-          type: string
-      description: A simplified representation of a Member, typically used in list views.
-      x-fiddle-dto-info:
-        baseSchemaName: Member
+
     MemberPartialUpdate:
       type: object
-      required:
-        - name
-        - rank
-        - points
-        - steam_id
-        - discord_id
-        - unit
-        - stab
-        - membership_type
-        - discord_nick
       properties:
         name:
           type: string
@@ -327,10 +278,10 @@ components:
           type: string
         membership_type:
           type: string
-      x-fiddle-dto-info:
-        baseSchemaName: Member
+
   responses:
     Conflict:
+      description: The request could not be completed due to a conflict with the current state of the resource.
       content:
         application/json:
           schema:
@@ -340,10 +291,8 @@ components:
             properties:
               message:
                 type: string
-      description: >-
-        The request could not be completed due to a conflict with the current
-        state of the resource. Resolve the conflict and try again.
     NotFound:
+      description: The server cannot find the requested resource.
       content:
         application/json:
           schema:
@@ -353,10 +302,8 @@ components:
             properties:
               message:
                 type: string
-      description: >-
-        The server cannot find the requested resource. The endpoint may be
-        invalid or the resource may no longer exist.
     Forbidden:
+      description: The server understood the request, but refuses to authorize it.
       content:
         application/json:
           schema:
@@ -366,10 +313,8 @@ components:
             properties:
               message:
                 type: string
-      description: >-
-        The server understood the request, but refuses to authorize it. Ensure
-        the client has appropriate permissions.
     BadRequest:
+      description: The server could not understand the request due to invalid syntax.
       content:
         application/json:
           schema:
@@ -377,21 +322,17 @@ components:
             required:
               - message
             properties:
+              message:
+                type: string
               errors:
                 type: array
                 items:
                   type: object
-                  required:
-                    - message
                   properties:
                     message:
                       type: string
-              message:
-                type: string
-      description: >-
-        The server could not understand the request due to invalid syntax. The
-        client should modify the request and try again.
     Unauthorized:
+      description: Authentication is required to access the requested resource.
       content:
         application/json:
           schema:
@@ -401,10 +342,8 @@ components:
             properties:
               message:
                 type: string
-      description: >-
-        Authentication is required to access the requested resource. The client
-        must include the appropriate credentials.
-    InternalServerErrror:
+    InternalServerError:
+      description: The server encountered an unexpected condition that prevented it from fulfilling the request.
       content:
         application/json:
           schema:
@@ -414,24 +353,18 @@ components:
             properties:
               message:
                 type: string
-      description: >-
-        The server encountered an unexpected condition that prevented it from
-        fulfilling the request. Report the issue to the support team if it
-        persists.
+
   parameters:
     id:
       in: path
       required: true
       name: id
-      style: simple
       schema:
         type: string
-      explode: false
-      description: discord_id bcs its the primary key of a member
-      allowReserved: false
-      allowEmptyValue: true
+      description: discord_id (primary key of a member)
+
   securitySchemes:
     BearerJwt:
       type: http
       scheme: bearer
-      bearerFormat: Json Web Token (JWT)
+      bearerFormat: JWT
