# crusader-back/model/memberModel.go
@@ -1,38 +1,57 @@
 package model
 
 import (
+	"time"
+
 	"gorm.io/gorm"
 )
-
-import "time"
 
 type Unit struct {
 	gorm.Model
 	Name          string
 	Description   string
 	DiscordRoleId string
-	UnitRoles     []UnitRoles
+	UnitRole      []UnitRole `gorm:"many2many:unit_unitRoles;"`
 }
 
-type UnitRoles struct {
+type UnitRole struct {
 	gorm.Model
 	Name        string `gorm:"unique;"`
 	Description string
 }
 
-type Member struct {
-	DiscordId      string `gorm:"primaryKey;autoIncrement:false"`
-	Name           string
-	SteamId        string
-	Unit           Unit           //one-to-Many
-	MembershipType MembershipType //one-to-Many
-	Rank           Rank           //one-to-many
-	Stab           Stab           //many-to-many
-	DiscordNick    string
-	CreatedAt      time.Time
-	UpdatedAT      time.Time
+type MembershipType struct {
+	gorm.Model
+	Name string
 }
 
-type Element struct {
+type Rank struct {
+	Level     int `gorm:"primaryKey;autoIncrement:false"`
+	Name      string
+	CreatedAt time.Time
+	UpdatedAT time.Time
+	DeletedAt gorm.DeletedAt `gorm:"index"`
+}
+
+type Stab struct {
 	gorm.Model
+	Name        string
+	Description string
+}
+
+type Member struct {
+	DiscordId        string `gorm:"primaryKey;autoIncrement:false"`
+	Name             string
+	SteamId          string
+	UnitID           uint
+	Unit             Unit `gorm:"foreignKey:UnitID"`
+	MembershipTypeID uint
+	MembershipType   MembershipType `gorm:"foreignKey:MembershipTypeID"`
+	RankLevel        int
+	Rank             Rank   `gorm:"foreignKey:RankLevel"`
+	Stab             []Stab `gorm:"many2many:member_stab;"`
+	DiscordNick      string
+	CreatedAt        time.Time
+	UpdatedAt        time.Time
+	DeletedAt        gorm.DeletedAt `gorm:"index"`
 }
